--- a/index.html
+++ b/index.html
@@ -131,7 +131,8 @@
                                 <path stroke-linecap="round" stroke-linejoin="round" d="M14.857 17.082a23.848 23.848 0 0 0 5.454-1.31A8.967 8.967 0 0 1 18 9.75V9A6 6 0 0 0 6 9v.75a8.967 8.967 0 0 1-2.312 6.022c1.733.64 3.56 1.085 5.455 1.31m5.714 0a24.255 24.255 0 0 1-5.714 0m5.714 0a3 3 0 1 1-5.714 0" />
                             </svg>
                         </div>
-                        <fixed-wrapper id="menu3" class="absolute w-[400px] max-h-[476px] top-[46px] -left-32 bg-soundcloud-main-bg">
+                        <!-- menu -->
+                        <fixed-wrapper id="menu3" class="absolute w-[400px] max-h-[476px] top-[46px] -left-72 bg-soundcloud-main-bg">
                             <!-- header -->
                             <div class="flex sticky top-0 justify-between items-center p-2 border border-soundcloud-divide border-t-0">
                                 <p class="text-white text-lg">Notifications</p>
@@ -293,8 +294,13 @@
                                     </div>
                                 </li>
                             </ul>
+                            <!-- footer -->
+                            <div class="sticky bottom-0 text-center p-2 border border-soundcloud-divide border-t-0">
+                                <p class="text-soundcloud-text hover:text-white">View all notifications</p>
+                            </div>
                         </fixed-wrapper>                         
                     </li>
+                    <!-- messages -->
                     <li class="group">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" stroke-width="1.5" class="size-6 fill-soundcloud-text stroke-soundcloud-header group-hover:fill-white">
                             <path stroke-linecap="round" stroke-linejoin="round" d="M21.75 6.75v10.5a2.25 2.25 0 0 1-2.25 2.25h-15a2.25 2.25 0 0 1-2.25-2.25V6.75m19.5 0A2.25 2.25 0 0 0 19.5 4.5h-15a2.25 2.25 0 0 0-2.25 2.25m19.5 0v.243a2.25 2.25 0 0 1-1.07 1.916l-7.5 4.615a2.25 2.25 0 0 1-2.36 0L3.32 8.91a2.25 2.25 0 0 1-1.07-1.916V6.75" />
