--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </div>
             <!-- middle -->
             <div>
-                <form class="relative mx-3">
+                <form class="relative mx-3 mr-6">
                     <input class="bg-soundcloud-black px-2 pr-7 h-[28px] w-[300px] text-sm rounded-sm text-soundcloud-text outline-none border-none" type="search" placeholder="Search" />
                     <button type="submit" class="absolute top-1.5 mr-2 right-0">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" stroke-width="2" stroke="white" class="size-4">
@@ -37,7 +37,7 @@
             </div>
             <!-- right hand side -->
             <div>
-                <ul class="flex items-center space-x-4 *:cursor-pointer">
+                <ul class="flex items-center space-x-5 *:cursor-pointer">
                     <li class="text-soundcloud-orange hover:text-soundcloud-orange-light">Try Go+</li>
                     <li class="text-soundcloud-orange hover:text-soundcloud-orange-light">Try Next Pro</li>
                     <li class="text-soundcloud-text hover:text-white">For Artists</li>
