--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body class="bg-soundcloud-main-bg text-soundcloud-text">
     
     <header class="bg-soundcloud-header">
+        <!-- only > md screens -->
         <nav class="hidden md:flex items-center justify-center">
             <!-- left had side -->
             <div>
@@ -382,6 +383,23 @@
                         </li>
                     </div>
                 </ul>
+            </div>
+        </nav>
+        <!-- only < md screens -->
+        <nav class="flex md:hidden justify-between items-center p-2">
+            <div class="w-52">
+                <button class="bg-gradient-to-tr from-[#ff8800] to-[#ff3300] rounded-md py-0.5 px-1 text-sm text-white font-bold">Listen Ad-Free</button>
+            </div>
+            <div class="shrink-0 grow text-center">
+                <p class="text-xl font-bold text-white">Home</p>
+            </div>
+            <div class="flex justify-end space-x-3 w-52">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-7 rotate-180">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="m9 12.75 3 3m0 0 3-3m-3 3v-7.5M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
+                </svg>   
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-7">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M8.625 12a.375.375 0 1 1-.75 0 .375.375 0 0 1 .75 0Zm0 0H8.25m4.125 0a.375.375 0 1 1-.75 0 .375.375 0 0 1 .75 0Zm0 0H12m4.125 0a.375.375 0 1 1-.75 0 .375.375 0 0 1 .75 0Zm0 0h-.375M21 12c0 4.556-4.03 8.25-9 8.25a9.764 9.764 0 0 1-2.555-.337A5.972 5.972 0 0 1 5.41 20.97a5.969 5.969 0 0 1-.474-.065 4.48 4.48 0 0 0 .978-2.025c.09-.457-.133-.901-.467-1.226C3.93 16.178 3 14.189 3 12c0-4.556 4.03-8.25 9-8.25s9 3.694 9 8.25Z" />
+                </svg>                                 
             </div>
         </nav>
     </header>
