--- a/index.html
+++ b/index.html
@@ -404,8 +404,140 @@
         </nav>
     </header>
 
-    <main class="">
-        <h1>hi bro</h1>
+    <main>
+        
+        <div class="flex px-48 mt-10">
+            <div class="grow">hi mom</div>
+            <!-- side menu -->
+            <div class="w-[345px]">
+
+                <p class="text-[16px] font-bold">Hey unixnexo, you have</p>
+                <p class="text-[40px] font-bold">2 plays</p>
+                <p class="text-[14px] mt-2">LAST 7 DAYS</p>
+                <button class="w-full border border-soundcloud-orange hover:bg-soundcloud-orange text-soundcloud-orange hover:text-white rounded-sm p-2.5 mt-5">View your Insights</button>
+
+                <!-- artists u should follow -->
+                <div>
+                    <!-- header -->
+                    <div class="flex justify-between mt-3">
+                        <div class="flex items-center space-x-1">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-4">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 6a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0ZM4.501 20.118a7.5 7.5 0 0 1 14.998 0A17.933 17.933 0 0 1 12 21.75c-2.676 0-5.216-.584-7.499-1.632Z" />
+                            </svg>                              
+                            <span>Artists you should follow</span>
+                        </div>
+                        <div class="group flex items-center space-x-1 cursor-pointer">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-4 group-hover:stroke-white">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M16.023 9.348h4.992v-.001M2.985 19.644v-4.992m0 0h4.992m-4.993 0 3.181 3.183a8.25 8.25 0 0 0 13.803-3.7M4.031 9.865a8.25 8.25 0 0 1 13.803-3.7l3.181 3.182m0-4.991v4.99" />
+                            </svg>
+                            <span class="group-hover:text-white">Refresh list</span>
+                        </div>
+                    </div>
+                    <!-- main content -->
+                    <hr class="border-t border-soundcloud-divide my-1"/>
+                    <div class="flex flex-col mt-2 space-y-5">
+                        <div class="flex justify-start items-center space-x-2 mt-3">
+                            <div class="flex">
+                                <div class="shrink-0 size-[50px] rounded-full overflow-hidden">
+                                    <img src="./public/imgs/prof6.JPG" class="size-full object-cover" alt="profile picture" />
+                                </div>
+                            </div>
+                            <div class="grow flex flex-col cursor-pointer">
+                                <p class="hover:text-white">Ebi</p>
+                                <div class="flex justify-start items-center space-x-4">
+                                    <div class="flex items-center space-x-1 group">
+                                        <svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 24 24" stroke-width="1.5" stroke="white" class="size-3.5">
+                                            <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 6a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0ZM4.501 20.118a7.5 7.5 0 0 1 14.998 0A17.933 17.933 0 0 1 12 21.75c-2.676 0-5.216-.584-7.499-1.632Z" />
+                                        </svg>                                          
+                                        <span class="group-hover:text-white">200M</span>
+                                    </div>
+                                    <div class="flex items-center space-x-1 group">
+                                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="white" class="size-3.5">
+                                            <path stroke-linecap="round" stroke-linejoin="round" d="m9 9 10.5-3m0 6.553v3.75a2.25 2.25 0 0 1-1.632 2.163l-1.32.377a1.803 1.803 0 1 1-.99-3.467l2.31-.66a2.25 2.25 0 0 0 1.632-2.163Zm0 0V2.25L9 5.25v10.303m0 0v3.75a2.25 2.25 0 0 1-1.632 2.163l-1.32.377a1.803 1.803 0 0 1-.99-3.467l2.31-.66A2.25 2.25 0 0 0 9 15.553Z" />
+                                        </svg>                                                                                  
+                                        <span class="group-hover:text-white">9,000</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="self-end">
+                                <button class="flex items-center space-x-1 border border-soundcloud-divide rounded-sm py-0.5 px-1.5 text-xs">
+                                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-3.5">
+                                        <path stroke-linecap="round" stroke-linejoin="round" d="M18 7.5v3m0 0v3m0-3h3m-3 0h-3m-2.25-4.125a3.375 3.375 0 1 1-6.75 0 3.375 3.375 0 0 1 6.75 0ZM3 19.235v-.11a6.375 6.375 0 0 1 12.75 0v.109A12.318 12.318 0 0 1 9.374 21c-2.331 0-4.512-.645-6.374-1.766Z" />
+                                    </svg>
+                                    <span>Follow</span>
+                                </button>
+                            </div>
+                        </div>
+                        <div class="flex justify-start items-center space-x-2 mt-3">
+                            <div class="flex">
+                                <div class="shrink-0 size-[50px] rounded-full overflow-hidden">
+                                    <img src="./public/imgs/prof3.JPG" class="size-full object-cover" alt="profile picture" />
+                                </div>
+                            </div>
+                            <div class="grow flex flex-col cursor-pointer">
+                                <p class="hover:text-white">Inna Luishy</p>
+                                <div class="flex justify-start items-center space-x-4">
+                                    <div class="flex items-center space-x-1 group">
+                                        <svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 24 24" stroke-width="1.5" stroke="white" class="size-3.5">
+                                            <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 6a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0ZM4.501 20.118a7.5 7.5 0 0 1 14.998 0A17.933 17.933 0 0 1 12 21.75c-2.676 0-5.216-.584-7.499-1.632Z" />
+                                        </svg>                                          
+                                        <span class="group-hover:text-white">345</span>
+                                    </div>
+                                    <div class="flex items-center space-x-1 group">
+                                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="white" class="size-3.5">
+                                            <path stroke-linecap="round" stroke-linejoin="round" d="m9 9 10.5-3m0 6.553v3.75a2.25 2.25 0 0 1-1.632 2.163l-1.32.377a1.803 1.803 0 1 1-.99-3.467l2.31-.66a2.25 2.25 0 0 0 1.632-2.163Zm0 0V2.25L9 5.25v10.303m0 0v3.75a2.25 2.25 0 0 1-1.632 2.163l-1.32.377a1.803 1.803 0 0 1-.99-3.467l2.31-.66A2.25 2.25 0 0 0 9 15.553Z" />
+                                        </svg>                                                                                  
+                                        <span class="group-hover:text-white">35</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="self-end">
+                                <button class="flex items-center space-x-1 border border-soundcloud-divide rounded-sm py-0.5 px-1.5 text-xs">
+                                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-3.5">
+                                        <path stroke-linecap="round" stroke-linejoin="round" d="M18 7.5v3m0 0v3m0-3h3m-3 0h-3m-2.25-4.125a3.375 3.375 0 1 1-6.75 0 3.375 3.375 0 0 1 6.75 0ZM3 19.235v-.11a6.375 6.375 0 0 1 12.75 0v.109A12.318 12.318 0 0 1 9.374 21c-2.331 0-4.512-.645-6.374-1.766Z" />
+                                    </svg>
+                                    <span>Follow</span>
+                                </button>
+                            </div>
+                        </div>
+                        <div class="flex justify-start items-center space-x-2 mt-3">
+                            <div class="flex">
+                                <div class="shrink-0 size-[50px] rounded-full overflow-hidden">
+                                    <img src="./public/imgs/prof2.JPG" class="size-full object-cover" alt="profile picture" />
+                                </div>
+                            </div>
+                            <div class="grow flex flex-col cursor-pointer">
+                                <p class="hover:text-white">the great russian girl</p>
+                                <div class="flex justify-start items-center space-x-4">
+                                    <div class="flex items-center space-x-1 group">
+                                        <svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 24 24" stroke-width="1.5" stroke="white" class="size-3.5">
+                                            <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 6a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0ZM4.501 20.118a7.5 7.5 0 0 1 14.998 0A17.933 17.933 0 0 1 12 21.75c-2.676 0-5.216-.584-7.499-1.632Z" />
+                                        </svg>                                          
+                                        <span class="group-hover:text-white">3,413</span>
+                                    </div>
+                                    <div class="flex items-center space-x-1 group">
+                                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="white" class="size-3.5">
+                                            <path stroke-linecap="round" stroke-linejoin="round" d="m9 9 10.5-3m0 6.553v3.75a2.25 2.25 0 0 1-1.632 2.163l-1.32.377a1.803 1.803 0 1 1-.99-3.467l2.31-.66a2.25 2.25 0 0 0 1.632-2.163Zm0 0V2.25L9 5.25v10.303m0 0v3.75a2.25 2.25 0 0 1-1.632 2.163l-1.32.377a1.803 1.803 0 0 1-.99-3.467l2.31-.66A2.25 2.25 0 0 0 9 15.553Z" />
+                                        </svg>                                                                                  
+                                        <span class="group-hover:text-white">2,423</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="self-end">
+                                <button class="flex items-center space-x-1 border border-soundcloud-divide rounded-sm py-0.5 px-1.5 text-xs">
+                                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-3.5">
+                                        <path stroke-linecap="round" stroke-linejoin="round" d="M18 7.5v3m0 0v3m0-3h3m-3 0h-3m-2.25-4.125a3.375 3.375 0 1 1-6.75 0 3.375 3.375 0 0 1 6.75 0ZM3 19.235v-.11a6.375 6.375 0 0 1 12.75 0v.109A12.318 12.318 0 0 1 9.374 21c-2.331 0-4.512-.645-6.374-1.766Z" />
+                                    </svg>
+                                    <span>Follow</span>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
     </main>
 
     <script defer src="./src/js/fixMenu.component.js"></script>
