--- a/index.html
+++ b/index.html
@@ -416,9 +416,10 @@
                 <p class="text-[14px] mt-2">LAST 7 DAYS</p>
                 <button class="w-full border border-soundcloud-orange hover:bg-soundcloud-orange text-soundcloud-orange hover:text-white rounded-sm p-2.5 mt-5">View your Insights</button>
 
-                <!-- artists u should follow -->
+                <!-- main content -->    
                 <div>
-                    <!-- header -->
+
+                    <!-- artists u should follow -->
                     <div class="flex justify-between mt-3">
                         <div class="flex items-center space-x-1">
                             <svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-4">
@@ -433,7 +434,6 @@
                             <span class="group-hover:text-white">Refresh list</span>
                         </div>
                     </div>
-                    <!-- main content -->
                     <hr class="border-t border-soundcloud-divide my-1"/>
                     <div class="flex flex-col mt-2 space-y-5">
                         <div class="flex justify-start items-center space-x-2 mt-3">
@@ -533,6 +533,60 @@
                             </div>
                         </div>
                     </div>
+
+                    <!-- likes -->
+                    <div class="flex justify-between mt-10">
+                        <div class="flex items-center space-x-1">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-4">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12Z" />
+                            </svg>                                                          
+                            <span>8,762 likes</span>
+                        </div>
+                        <div class="group flex items-center space-x-1 cursor-pointer">
+                            <span class="group-hover:text-white">View all</span>
+                        </div>
+                    </div>
+                    <hr class="border-t border-soundcloud-divide my-1"/>
+                    <div class="flex flex-col mt-2 space-y-5">
+                        
+                        <div class="flex items-center text-sm space-x-2">
+                            <div class="size-[50px] overflow-hidden">
+                                <img src="./public/imgs/cover1.jpg" class="size-full object-cover" alt="music picture" />
+                            </div>
+                            <div class="flex flex-col">
+                                <p class="hover:text-white">kandlus</p>
+                                <p class="hover:text-white">Sirvan - Khosravi - Bargard - 128k</p>
+                                <div class="flex space-x-3">
+                                    <div class="flex items-center">
+                                        <svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-4">
+                                            <path stroke-linecap="round" stroke-linejoin="round" d="M5.25 5.653c0-.856.917-1.398 1.667-.986l11.54 6.347a1.125 1.125 0 0 1 0 1.972l-11.54 6.347a1.125 1.125 0 0 1-1.667-.986V5.653Z" />
+                                        </svg>                                          
+                                        <span>107K</span>
+                                    </div>
+                                    <div class="flex items-center">
+                                        <svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-4">
+                                            <path stroke-linecap="round" stroke-linejoin="round" d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12Z" />
+                                        </svg>                                                                                  
+                                        <span>1,306</span>
+                                    </div>
+                                    <div class="flex items-center justify-center">
+                                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-4">
+                                            <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 12c0-1.232-.046-2.453-.138-3.662a4.006 4.006 0 0 0-3.7-3.7 48.678 48.678 0 0 0-7.324 0 4.006 4.006 0 0 0-3.7 3.7c-.017.22-.032.441-.046.662M19.5 12l3-3m-3 3-3-3m-12 3c0 1.232.046 2.453.138 3.662a4.006 4.006 0 0 0 3.7 3.7 48.656 48.656 0 0 0 7.324 0 4.006 4.006 0 0 0 3.7-3.7c.017-.22.032-.441.046-.662M4.5 12l3 3m-3-3-3 3" />
+                                        </svg>                                                                                                                           
+                                        <span>18</span>
+                                    </div>
+                                    <div class="flex items-center justify-center">
+                                        <svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-4">
+                                            <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 12.76c0 1.6 1.123 2.994 2.707 3.227 1.087.16 2.185.283 3.293.369V21l4.076-4.076a1.526 1.526 0 0 1 1.037-.443 48.282 48.282 0 0 0 5.68-.494c1.584-.233 2.707-1.626 2.707-3.228V6.741c0-1.602-1.123-2.995-2.707-3.228A48.394 48.394 0 0 0 12 3c-2.392 0-4.744.175-7.043.513C3.373 3.746 2.25 5.14 2.25 6.741v6.018Z" />
+                                        </svg>                                                                                                                                                                   
+                                        <span>16</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        
+                    </div>
+
                 </div>
 
             </div>
