--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                                 </svg>
                             </div>
                             <!-- menu -->
-                            <fixed-wrapper id="menu1" class="absolute hidden top-[46px] left-0 whitespace-nowrap bg-soundcloud-main-bg">
+                            <fixed-wrapper id="menu1" class="absolute hidden top-[46px] left-0 whitespace-nowrap bg-soundcloud-main-bg z-50">
                                 <ul class="rounded-b-sm border border-t-0 border-soundcloud-divide *:flex *:items-center *:justify-start *:space-x-1.5 *:pl-3 *:pr-3 *:py-1.5 hover:*:bg-soundcloud-hover">
                                     <li>
                                         <svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 24 24" stroke-width="1.5" class="size-4">
@@ -134,7 +134,7 @@
                                 </svg>
                             </div>
                             <!-- menu -->
-                            <fixed-wrapper id="menu3" class="absolute hidden w-[400px] max-h-[476px] top-[46px] right-0 bg-soundcloud-main-bg">
+                            <fixed-wrapper id="menu3" class="absolute hidden w-[400px] max-h-[476px] top-[46px] right-0 bg-soundcloud-main-bg z-50">
                                 <!-- header -->
                                 <div class="flex sticky top-0 justify-between items-center p-2 border border-soundcloud-divide border-t-0">
                                     <p class="text-white text-lg">Notifications</p>
@@ -310,7 +310,7 @@
                                 </svg> 
                             </div>    
                             <!-- menu -->
-                            <fixed-wrapper id="menu4" class="absolute hidden w-[400px] max-h-[476px] top-[46px] right-0 bg-soundcloud-main-bg">
+                            <fixed-wrapper id="menu4" class="absolute hidden w-[400px] max-h-[476px] top-[46px] right-0 bg-soundcloud-main-bg z-50">
                                 <!-- header -->
                                 <div class="flex sticky top-0 justify-between items-center p-2 border border-soundcloud-divide border-t-0">
                                     <p class="text-white text-lg">Messages</p>
@@ -355,7 +355,7 @@
                                 </svg>
                             </div>
                             <!-- menu -->
-                            <fixed-wrapper id="menu2" class="absolute hidden top-[46px] right-0 whitespace-nowrap bg-soundcloud-main-bg">
+                            <fixed-wrapper id="menu2" class="absolute hidden top-[46px] right-0 whitespace-nowrap bg-soundcloud-main-bg z-50">
                                 <ul class="rounded-b-sm border border-t-0 text-sm border-soundcloud-divide *:space-x-1.5 *:pl-3 *:pr-6 [&>*:not(hr)]:py-1.5 hover:[&>*:not(hr)]:bg-soundcloud-hover">
                                     <li>About us</li>
                                     <li>Legal</li>
