--- a/index.html
+++ b/index.html
@@ -1012,12 +1012,17 @@
 
         <!-- player - fixed at bottom - < md screens only -->
         <div class="fixed bottom-[66px] left-1/2 -translate-x-1/2 w-[97vw] bg-soundcloud-hover rounded-full p-3">
-            <div class="flex space-x-3 px-1">
-                <div class="flex items-center justify-center size-12 bg-white rounded-full">
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="black" viewBox="0 0 24 24" stroke-width="1.5" stroke="black" class="size-6">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="M5.25 5.653c0-.856.917-1.398 1.667-.986l11.54 6.347a1.125 1.125 0 0 1 0 1.972l-11.54 6.347a1.125 1.125 0 0 1-1.667-.986V5.653Z" />
-                    </svg>                      
+            <div class="flex items-center space-x-3 px-1">
+
+                <div class="relative size-[50px] flex items-center justify-center bg-soundcloud-black rounded-full">
+                    <div class="z-20 flex items-center justify-center size-[40px] bg-white rounded-full">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="black" viewBox="0 0 24 24" stroke-width="1.5" stroke="black" class="size-6">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M5.25 5.653c0-.856.917-1.398 1.667-.986l11.54 6.347a1.125 1.125 0 0 1 0 1.972l-11.54 6.347a1.125 1.125 0 0 1-1.667-.986V5.653Z" />
+                        </svg>                      
+                    </div>
+                    <div class="absolute bg-soundcloud-orange size-[50px] rounded-full cut-circle"></div>
                 </div>
+                
                 <div class="flex flex-col">
                     <p class="text-white">Alesso, Nate Smith - I Like it</p>
                     <p>Alesso</p>
