--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
 
     <main>
         
-        <div class="flex px-48 mt-10 mb-14">
+        <div class="flex px-10 2xl:px-48 mt-10 mb-14">
 
             <!-- main content - sliders -->
             <div class="grow overflow-hidden px-3 mr-5">
