--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body class="bg-soundcloud-main-bg text-soundcloud-text">
     
-    <header class="bg-soundcloud-header">
+    <header class="bg-soundcloud-header sticky top-0 z-50">
         <!-- only > md screens -->
         <nav class="hidden md:flex items-center justify-center">
             <!-- left had side -->
